--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.3.0"
+    "css-element-queries": "^0.4.0",
+    "ember-cli-babel": "^6.3.0",
+    "ember-cli-node-assets": "^0.2.2"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
