--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "css-element-queries": "^0.4.0",
     "ember-cli-babel": "^6.3.0",
     "ember-cli-htmlbars": "^2.0.3",
-    "ember-cli-node-assets": "^0.2.2"
+    "ember-cli-node-assets": "^0.2.2",
+    "jquery-ui": "^1.12.1"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
