--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
+    "jquery-ui": "^1.12.1",
     "loader.js": "^4.2.3"
   },
   "engines": {
